[package]
name = "kube-client-ext"
version = "3.0.0"
edition = "2024"
license = "Apache-2.0"
repository = "https://github.com/rkubectl/kube-client-ext-rs"
description = "Extension trait (helpers) for kube::Client"
rust-version = "1.88.0"


[dependencies]
async-trait = "0.1"
either = "1.15"
k8s-openapi = { version = "0.27", features = [] }
k8s-openapi-ext = "0.27"
kube-client = { version = "3.0", default-features = false, features = [
    "client",
] }


[dev-dependencies.k8s-openapi]
version = "0.27"
features = ["latest"]


[features]
default = ["k8s-openapi/latest"]
pedantic = []


[package.metadata.docs.rs]
features = ["k8s-openapi/latest"]
